@@ -1,10 +1,10 @@
 plugins {
+    application
     id("org.openjfx.javafxplugin") version "0.1.0"
     id("org.beryx.jlink") version "3.1.1"
-    application
 }
 
-group = "space.aleph"
+group = "home"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -12,10 +12,18 @@ repositories {
 }
 
 dependencies {
+    // JavaFX
+    implementation("org.openjfx:javafx-controls:21")
+    implementation("org.openjfx:javafx-fxml:21")
+    implementation("org.openjfx:javafx-graphics:21")
+
+    // Jackson
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.3")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.3")
+
+    // Testing
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
-    implementation("org.openjfx:javafx-controls:21")
-    implementation("org.openjfx:javafx-graphics:21")
 }
 
 javafx {
@@ -24,9 +32,16 @@ javafx {
 }
 
 application {
-    mainClass.set("space.aleph.Main")
+    mainClass.set("home.Main")
 }
 
 tasks.test {
     useJUnitPlatform()
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs = listOf(
+        "--module-path", classpath.asPath,
+        "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics"
+    )
 }
